acabei de finalizar o formulário de pagamento

--- a/equipe15/cursos.html
+++ b/equipe15/cursos.html
@@ -29,7 +29,8 @@
             ECMAScript 6, Bootstrap, PHP, PHP com AJAX e muito mais.</p>
         <p>Estudo nos dias e horários que você quiser.</p>
         <br>
-        <p>Apenas R$19,90! Clique aqui para comprar: <form method="get" action=" Dados_pagamento.html"><button type="submit">Efetuar o pagamento</button></form>
+        <p>Apenas R$19,90! Clique aqui para comprar: <form><a href="Dados_pagamento.html" target="_blank">LINK PARA
+                    PAGAMENTO DE CURSO</a></form>
     </center>
     <hr>
     <center>
@@ -45,7 +46,8 @@
             últimas tecnologias: CSS Grid, Flexbox e muito mais</p>
         <p>Projeto de aplicações reais</p>
         <br>
-        <p>Apenas R$24,99! Clique aqui para comprar:<form method="get" action=" Dados_pagamento.html"><button type="submit">Efetuar o pagamento</button></form>
+        <p>Apenas R$24,99! Clique aqui para comprar:<form><a href="Dados_pagamento.html" target="_blank">LINK PARA
+                    PAGAMENTO DE CURSO</a></form>
     </center>
     <hr>
     <center>
