Botao de excluir cursose eventos adicionado com sucessogit status

--- a/equipe15/cursos.html
+++ b/equipe15/cursos.html
@@ -30,7 +30,8 @@
         <p>Estudo nos dias e horários que você quiser.</p>
         <br>
         <p>Apenas R$19,90! Clique aqui para comprar: <form><a href="Dados_pagamento.html" target="_blank">LINK PARA
-                    PAGAMENTO DE CURSO</a></form>
+                    PAGAMENTO DE CURSO</a></form><br>
+                    <input type="submit" name="enviar" value="APAGAR CURSO" onclick="Evento()">
     </center>
     <hr>
     <center>
@@ -47,7 +48,9 @@
         <p>Projeto de aplicações reais</p>
         <br>
         <p>Apenas R$24,99! Clique aqui para comprar:<form><a href="Dados_pagamento.html" target="_blank">LINK PARA
-                    PAGAMENTO DE CURSO</a></form>
+                    PAGAMENTO DE CURSO</a></form><br>
+                    <input type="submit" name="enviar" value="APAGAR CURSO" onclick="Evento()">
+
     </center>
     <hr>
     <center>
@@ -78,6 +81,9 @@
         <h3>Horário</h3>
         <p>31 de dez. de 2019 22:00 - 1 de jan. de 2020 09:00</p>
         <button type="text" onclick="Evento2()">Participar</button>
+        <br>
+        <br>
+        <button type="text" onclick="Evento2()">Apagar Evento</button>
     </center>
     <hr>
 
@@ -85,11 +91,11 @@
 </body>
 <script>
     function Evento() {
-        alert('Curso comprado com sucesso!')
+        alert('Curso apagado com sucesso')
     }
 
     function Evento2() {
-        alert('Inscrição feita com sucesso!')
+        alert('Evento apagado com sucesso')
     }
 </script>
 
