Adiconei o atualizar as informações dos cursos e eventos

--- a/equipe15/cursos.html
+++ b/equipe15/cursos.html
@@ -17,6 +17,10 @@
         <hr>
         <h2 id="cursos_certificacao">Cursos de certificação</h2>
         <hr>
+        <br><br>
+        <button type="text" onclick="Evento3()">Atualizar as informações do cursos</button>
+        <br>
+        <br>
         <h3>Curso Desenvolvedor VRaptor Completo + 10 de projetos.</h3>
         <p>O treinamento de VRaptor mais vendido no Brasil</p>
         <h3>O que você aprenderá</h3>
@@ -34,7 +38,12 @@
                     <input type="submit" name="enviar" value="APAGAR CURSO" onclick="Evento()">
     </center>
     <hr>
+    <br><br>
+
     <center>
+            <button type="text" onclick="Evento3()">Atualizar as informações do cursos</button>
+            <br>
+            <br>
         <h3>Apostila Web ágil com VRaptor, Hibernate e AJAX</h3>
         <p>Aprenda tudo sobre os frameworks para desenvolvimento web
             e como utilizá-los para seu sucesso.
@@ -56,6 +65,12 @@
     <center>
         <h2 id="eventos">Eventos</h2>
         <hr>
+       <br>
+        <br>
+
+        <button type="text" onclick="Evento4()">Atualizar as informações do cursos</button>
+            <br>
+            <br>
 
         <h3>VRaptor Celebration 2020</h3>
         <p>
@@ -93,10 +108,17 @@
     function Evento() {
         alert('Curso apagado com sucesso')
     }
+    function Evento3() {
+        alert('Curso atualizado com sucesso')
+    }
 
     function Evento2() {
         alert('Evento apagado com sucesso')
     }
+    function Evento4() {
+        alert('Evento atualizado  com sucesso')
+    }
+
 </script>
 
 </html>
