modifiquei algo a mais

--- a/sdds.html
+++ b/sdds.html
@@ -32,5 +32,6 @@
     <a href="criar_curso.html">Criar Curso</a>
     <a href="criar_evento.html">Criar Evento</a> 
     <a href="informacoes.html">Informações</a>
+    <a href="cursos.html">Consulta de Cursos</a>
         </body>
 </html>
